@@ -1,3 +1,4 @@
 <html><body>You can select multiple files for opening in the
-<b>Open</b> dialog by control-clicking on the files in
+<b>Open File</b> dialog or <b>File System Browser</b> window
+by control-clicking on the files in
 question.</body></html>
