@@ -1,0 +1,3 @@
+<html><body>You can open a file in a new view or new split by
+right-clicking on it in the <b>Open File</b> dialog box and selecting
+the appropriate command from the menu.</body></html>
